--- a/.github/workflows/cd_workflow.yml
+++ b/.github/workflows/cd_workflow.yml
@@ -10,11 +10,7 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     env:
-      ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
-      ID_TOKEN: ${{ secrets.ID_TOKEN }}
-      REFRESH_TOKEN: ${{ secrets.REFRESH_TOKEN }}
-      CLIENT_ID: ${{ secrets.CLIENT_ID }}
-      CLIENT_SECRET: ${{ secrets.CLIENT_SECRET }}
+      CLASPRC_JSON: ${{ secrets.CLASPRC }}
     timeout-minutes: 10
     steps:
       - uses: actions/checkout@v3
@@ -28,7 +24,7 @@ jobs:
           npm install -g @google/clasp
       - name: Generate ~/.clasprc.json
         run: |
-          bash deployment/setup.sh
+          echo '${{ secrets.CLASPRC }}' > ~/.clasprc.json
       - name: Setup SCRIPT_ID
         run: |
           if [[ ${{ github.ref }} == 'refs/heads/main' ]]; then
@@ -38,7 +34,7 @@ jobs:
           fi
       - name: Generate ~/.clasp.json
         run: |
-          bash deployment/setup_claspjson.sh
+          bash setup.sh
       - name: Install Dependencies
         run: |
           npm ci
